@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+	New features:
+	* Support for prefix option in client
 
 0.003     2014-08-27 03:50:57+01:00 Europe/London
 	No new features
